--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "dev": "nodemon",
     "build": "tsc"
   },
-  "nodemonConfig":{
-    "watch":[
+  "nodemonConfig": {
+    "watch": [
       "src"
     ],
     "ext": "ts",
-    "exec": "ts-node src/index.ts"
+    "exec": "ts-node --files src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "tsoa": "^5.1.1"
   }
 }
