--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.4",
     "nodemon": "^3.0.1",
+    "prisma": "^5.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
