added endpoint to generate jwt, crud user, error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
             "database": "${workspaceFolder:Classflow-api}/prisma/dev.db"
         }
     ],
-    "sqltools.useNodeRuntime": true
+    "sqltools.useNodeRuntime": true,
+    "cmake.configureOnOpen": false
 }
