--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.5",
-    "@types/node": "^20.6.4",
+    "@types/node": "^20.8.7",
+    "@types/nodemailer": "^6.4.13",
+    "@types/react": "^18.2.29",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1",
     "ts-node": "^10.9.1",
@@ -44,6 +46,8 @@
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.6",
+    "resend": "^1.1.0",
     "tsoa": "^5.1.1"
   }
 }
