--- a/package.json
+++ b/package.json
@@ -20,33 +20,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.4",
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.18",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/morgan": "^1.9.5",
-    "@types/node": "^20.8.7",
-    "@types/nodemailer": "^6.4.13",
-    "@types/react": "^18.2.29",
-    "nodemon": "^3.0.1",
-    "prisma": "^5.3.1",
-    "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.8",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "@types/cookie-parser": "1.4.4",
+    "@types/cors": "2.8.14",
+    "@types/express": "4.17.18",
+    "@types/jsonwebtoken": "9.0.3",
+    "@types/morgan": "1.9.5",
+    "@types/node": "20.8.7",
+    "@types/nodemailer": "6.4.13",
+    "@types/react": "18.2.29",
+    "nodemon": "3.0.1",
+    "prisma": "5.3.1",
+    "ts-node": "10.9.1",
+    "tsc-alias": "1.8.8",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
-    "axios": "^1.5.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "module-alias": "^2.2.3",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.6",
-    "tsoa": "^5.1.1"
+    "@prisma/client": "5.3.1",
+    "axios": "1.5.1",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "express-async-handler": "1.2.0",
+    "jsonwebtoken": "9.0.2",
+    "module-alias": "2.2.3",
+    "morgan": "1.10.0",
+    "nodemailer": "6.9.6",
+    "tsoa": "5.1.1"
   }
 }
