--- a/package.json
+++ b/package.json
@@ -38,15 +38,19 @@
   "dependencies": {
     "@prisma/client": "5.3.1",
     "axios": "1.5.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-async-handler": "1.2.0",
+    "file-type": "^18.7.0",
     "jsonwebtoken": "9.0.2",
     "module-alias": "2.2.3",
     "morgan": "1.10.0",
     "nodemailer": "6.9.6",
-    "tsoa": "5.1.1"
+    "tsoa": "5.1.1",
+    "uuid": "^9.0.1"
   }
 }
